# tlaxcaltin

./: .gitignore  ReadMe.md  argparse.wrap  arpack-ng.wrap  arpackpp.wrap  boost-preprocessor.wrap  combblas.wrap  contador.wrap  dune-common.wrap  dune-istl.wrap  expected.wrap  fmt.wrap  ginkgo.wrap  gklib.wrap  google-benchmark.wrap  grex.wrap  gtest.wrap  hypre.wrap  inotify-cpp.wrap  jaybird.wrap  liblzma.wrap  lineal.wrap  metis.wrap  mhd-io.wrap  mumps.wrap  nlohmann-json.wrap  parmetis.wrap  pcg-cpp.wrap  plazma.wrap  pyproject.toml  range-v3.wrap  scalapack.wrap  scotch.wrap  stado.wrap  suitesparse.wrap  superlu.wrap  superlu_dist.wrap  thesauros.wrap  unordered_dense.wrap  update_tlaxcaltin.py
liblzma/: config.h.meson
mpi/: meson.build
mpi-c/: meson.build  meson_options.txt
mpi-cpp/: meson.build
mpi-fortran/: meson.build
options/: meson.build
packagefiles/argparse/: meson.build
packagefiles/arpack-ng/: meson.build
packagefiles/arpackpp/: meson.build  meson_options.txt
packagefiles/arpackpp/examples/: meson.build
packagefiles/boost-preprocessor/: meson.build
packagefiles/combblas/: meson.build
packagefiles/dune-common/: meson.build  meson_options.txt
packagefiles/dune-common/dune/common/test/: meson.build
packagefiles/dune-common/meson_python/: configure_file.py
packagefiles/dune-istl/: meson.build
packagefiles/dune-istl/dune/istl/: meson.build
packagefiles/expected/: meson.build
packagefiles/fmt/: meson.build
packagefiles/ginkgo/: meson.build  meson_options.txt
packagefiles/ginkgo/examples/: meson.build
packagefiles/ginkgo/examples/adaptiveprecision-blockjacobi/: meson.build
packagefiles/ginkgo/examples/batched-solver/: meson.build
packagefiles/ginkgo/examples/cb-gmres/: meson.build
packagefiles/ginkgo/examples/custom-logger/: meson.build
packagefiles/ginkgo/examples/custom-matrix-format/: meson.build
packagefiles/ginkgo/examples/custom-stopping-criterion/: meson.build
packagefiles/ginkgo/examples/custom-stopping-criterion/data/: meson.build
packagefiles/ginkgo/examples/distributed-solver/: meson.build
packagefiles/ginkgo/examples/external-lib-interfacing/: meson.build
packagefiles/ginkgo/examples/file-config-solver/: meson.build
packagefiles/ginkgo/examples/ginkgo-overhead/: meson.build
packagefiles/ginkgo/examples/ginkgo-ranges/: meson.build
packagefiles/ginkgo/examples/heat-equation/: meson.build
packagefiles/ginkgo/examples/ilu-preconditioned-solver/: meson.build
packagefiles/ginkgo/examples/inverse-iteration/: meson.build
packagefiles/ginkgo/examples/ir-ilu-preconditioned-solver/: meson.build
packagefiles/ginkgo/examples/iterative-refinement/: meson.build
packagefiles/ginkgo/examples/kokkos-assembly/: meson.build
packagefiles/ginkgo/examples/minimal-cuda-solver/: meson.build
packagefiles/ginkgo/examples/minimal-cuda-solver/data/: meson.build
packagefiles/ginkgo/examples/mixed-multigrid-preconditioned-solver/: meson.build
packagefiles/ginkgo/examples/mixed-multigrid-preconditioned-solver/data/: meson.build
packagefiles/ginkgo/examples/mixed-multigrid-solver/: meson.build
packagefiles/ginkgo/examples/mixed-precision-ir/: meson.build
packagefiles/ginkgo/examples/mixed-spmv/: meson.build
packagefiles/ginkgo/examples/multigrid-preconditioned-solver/: meson.build
packagefiles/ginkgo/examples/multigrid-preconditioned-solver-customized/: meson.build
packagefiles/ginkgo/examples/nine-pt-stencil-solver/: meson.build
packagefiles/ginkgo/examples/papi-logging/: meson.build
packagefiles/ginkgo/examples/par-ilu-convergence/: meson.build
packagefiles/ginkgo/examples/performance-debugging/: meson.build
packagefiles/ginkgo/examples/poisson-solver/: meson.build
packagefiles/ginkgo/examples/preconditioned-solver/: meson.build
packagefiles/ginkgo/examples/preconditioner-export/: meson.build
packagefiles/ginkgo/examples/reordered-preconditioned-solver/: meson.build
packagefiles/ginkgo/examples/schroedinger-splitting/: meson.build
packagefiles/ginkgo/examples/simple-solver/: meson.build
packagefiles/ginkgo/examples/simple-solver-logging/: meson.build
packagefiles/ginkgo/examples/three-pt-stencil-solver/: meson.build
packagefiles/ginkgo/include/ginkgo/: meson.build
packagefiles/ginkgo/matrices/: meson.build
packagefiles/ginkgo/matrices/test/: meson.build
packagefiles/gklib/: meson.build
packagefiles/gtest/: meson.build
packagefiles/gtest/googlemock/: meson.build
packagefiles/gtest/googletest/: meson.build
packagefiles/hypre/: meson.build  meson_options.txt
packagefiles/inotify-cpp/: meson.build
packagefiles/metis/: meson.build
packagefiles/mumps/: meson.build  meson_options.txt
packagefiles/mumps/hybrid/include/: mumps-hybrid.h
packagefiles/mumps/hybrid/src/: mumps-par.c  mumps-par.map  mumps-seq.c  mumps-seq.map
packagefiles/parmetis/: meson.build
packagefiles/pcg-cpp/: meson.build
packagefiles/range-v3/: meson.build  meson_options.txt
packagefiles/range-v3/test/: meson.build
packagefiles/range-v3/test/action/: meson.build
packagefiles/range-v3/test/algorithm/: meson.build
packagefiles/range-v3/test/experimental/: meson.build
packagefiles/range-v3/test/functional/: meson.build
packagefiles/range-v3/test/iterator/: meson.build
packagefiles/range-v3/test/numeric/: meson.build
packagefiles/range-v3/test/range/: meson.build
packagefiles/range-v3/test/utility/: meson.build
packagefiles/range-v3/test/view/: meson.build
packagefiles/scalapack/: meson.build  meson_options.txt
packagefiles/scalapack/BLACS/SRC/: meson.build
packagefiles/scalapack/PBLAS/SRC/: meson.build
packagefiles/scalapack/REDIST/: meson.build
packagefiles/scalapack/REDIST/SRC/: meson.build
packagefiles/scalapack/SRC/: meson.build
packagefiles/scalapack/TOOLS/: mangletest.f  meson.build
packagefiles/scotch/: meson.build  meson_options.txt
packagefiles/scotch/src/: meson.build
packagefiles/scotch/src/esmumps/: meson.build
packagefiles/scotch/src/libscotch/: meson.build
packagefiles/scotch/src/libscotchmetis/: meson.build
(+47 files in other folders)
