# This file is part of https://github.com/KurtBoehm/tlaxcaltin.
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

project(
  'arpack-ng',
  'fortran',
  version: '3.9.1',
)

arpack_ng_sources = [
  'SRC/ccdotc.f',
  'SRC/cgetv0.f',
  'SRC/cnaitr.f',
  'SRC/cnapps.f',
  'SRC/cnaup2.f',
  'SRC/cnaupd.f',
  'SRC/cneigh.f',
  'SRC/cneupd.f',
  'SRC/cngets.f',
  'SRC/csortc.f',
  'SRC/cstatn.f',
  'SRC/dgetv0.f',
  'SRC/dnaitr.f',
  'SRC/dnapps.f',
  'SRC/dnaup2.f',
  'SRC/dnaupd.f',
  'SRC/dnconv.f',
  'SRC/dneigh.f',
  'SRC/dneupd.f',
  'SRC/dngets.f',
  'SRC/dsaitr.f',
  'SRC/dsapps.f',
  'SRC/dsaup2.f',
  'SRC/dsaupd.f',
  'SRC/dsconv.f',
  'SRC/dseigt.f',
  'SRC/dsesrt.f',
  'SRC/dseupd.f',
  'SRC/dsgets.f',
  'SRC/dsortc.f',
  'SRC/dsortr.f',
  'SRC/dstatn.f',
  'SRC/dstats.f',
  'SRC/dstqrb.f',
  'SRC/sgetv0.f',
  'SRC/snaitr.f',
  'SRC/snapps.f',
  'SRC/snaup2.f',
  'SRC/snaupd.f',
  'SRC/snconv.f',
  'SRC/sneigh.f',
  'SRC/sneupd.f',
  'SRC/sngets.f',
  'SRC/ssaitr.f',
  'SRC/ssapps.f',
  'SRC/ssaup2.f',
  'SRC/ssaupd.f',
  'SRC/ssconv.f',
  'SRC/sseigt.f',
  'SRC/ssesrt.f',
  'SRC/sseupd.f',
  'SRC/ssgets.f',
  'SRC/ssortc.f',
  'SRC/ssortr.f',
  'SRC/sstatn.f',
  'SRC/sstats.f',
  'SRC/sstqrb.f',
  'SRC/zgetv0.f',
  'SRC/znaitr.f',
  'SRC/znapps.f',
  'SRC/znaup2.f',
  'SRC/znaupd.f',
  'SRC/zneigh.f',
  'SRC/zneupd.f',
  'SRC/zngets.f',
  'SRC/zsortc.f',
  'SRC/zstatn.f',
  'SRC/zzdotc.f',
  'UTIL/cmout.f',
  'UTIL/cvout.f',
  'UTIL/dmout.f',
  'UTIL/dvout.f',
  'UTIL/icnteq.f',
  'UTIL/icopy.f',
  'UTIL/iset.f',
  'UTIL/iswap.f',
  'UTIL/ivout.f',
  'UTIL/second.f',
  # 'UTIL/second_NONE.f',
  'UTIL/smout.f',
  'UTIL/svout.f',
  'UTIL/zmout.f',
  'UTIL/zvout.f',
]

arpack_ng_inc = include_directories('SRC')

deps = [dependency('blas'), dependency('lapack')]

arpack_ng_lib = shared_library(
  'arpack_ng',
  arpack_ng_sources,
  include_directories: arpack_ng_inc,
  dependencies: deps,
)
arpack_ng_dep = declare_dependency(
  link_with: arpack_ng_lib,
  include_directories: arpack_ng_inc,
  dependencies: deps,
)
