# This file is part of https://github.com/KurtBoehm/tlaxcaltin.
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

project(
  'boost-preprocessor',
  'cpp',
  version: '1.89.0',
  license: 'BSL-1.0',
)

boost_preprocessor_dep = declare_dependency(
  include_directories: include_directories('include'),
)
